lintian (2.5.12) UNRELEASED; urgency=low

  * Summary of tag changes:
    + Added:
      - dir-or-file-in-build-tree
      - dir-or-file-in-etc-opt
      - dir-or-file-in-home

  * checks/cruft:
    + [NT] Do not emit the license-problem-json-evil tag for
      non-free packages.
  * checks/files{,.desc}:
    + [NT] Apply patch from Bastien Roucariès to catch paths
      in (common) build dirs.  (Closes: #678857)

  * lib/Lintian/Collect.pm:
    + [NT] Add "is_non_free" method to easily check of a given
      package appears to be non-free.

  * reporting/harness:
    + [NT] Add --to-stdout option to emit log information to
      stdout as well as the log files.
    + [NT] Always schedule packages in groups.  Otherwise, binNMU'ed
      binaries would not be tested together with their source
      package (and architecture independent packages).
    + [NT] Schedule groups in chunks (default 512 per chunk).
      This makes the Lintian processes shorter and makes memory
      reclaimable sooner.  (Closes: #695839)

 -- Niels Thykier <niels@thykier.net>  Thu, 13 Dec 2012 13:38:59 +0100

lintian (2.5.11) experimental; urgency=low

  * Summary of tag changes:
    + Added:
      - conffile-has-bad-file-type
      - debug-package-for-multi-arch-same-pkg-not-coinstallable
      - dm-upload-allowed-is-obsolete
      - field-name-typo-in-dep5-copyright
      - font-adobe-copyrighted-fragment
      - license-problem-json-evil
      - maintainer-script-has-unexpanded-debhelper-token
      - shlibs-uses-obsolete-relation
      - untranslatable-debconf-templates
    + Removed:
      - apparently-truncated-elf-binary
      - data.tar.xz-member-without-dpkg-pre-depends
      - debhelper-overrides-need-versioned-build-depends
      - no-source-field
      - preinst-uses-dpkg-maintscript-helper-without-predepends

  * checks/*:
    + [NT] Remove assumption that lintian will chdir into the
      the lab before calling the check.