@@ -486,3 +486,13 @@ Info: The given source file is copyrighted under the non free
  license of json and the infamous clause:
  The Software shall be used for Good, not Evil.
 Ref: http://wiki.debian.org/qa.debian.org/jsonevil
+
+Tag: license-problem-gfdl-invariants
+Severity: serious
+Certainty: possible
+Info: The given source file is licensed under GFDL with invariant
+ section or front-cover or back-cover text.
+ .
+ GFDL with invariant sections, front-cover or back-cover texts are not
+ suitable for main.
+Ref: http://www.debian.org/vote/2006/vote_001
