@@ -1,0 +1,7 @@
+Permission is granted to copy, distribute and/or modify this
+document under the terms of the GNU Free Documentation License,
+Version 1.3 or any later version published by the Free Software
+Foundation; with the Invariant Sections being just "GNU
+Manifesto", with no Front-Cover Texts, and with no Back-Cover
+Texts.  A copy of the license is included in the section
+entitled "GNU Free Documentation License".
