@@ -1,0 +1,5 @@
+Testname: cruft-gfdl-invariants
+Sequence: 6000
+Version: 1.0
+Description: Check for GFDL invariants sections
+Test-For: license-problem-gfdl-invariants
