@@ -1,0 +1,3 @@
+E: cruft-gfdl-invariants source: license-problem-gfdl-invariants src/frontback.html
+E: cruft-gfdl-invariants source: license-problem-gfdl-invariants src/frontback.texi
+E: cruft-gfdl-invariants source: license-problem-gfdl-invariants src/invariant.txt
